# baccarat-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: BaccaratGame.h  Card.h  Deck.h  Display.h  Player.h  Scoreboard.h  Statistics.h
src/: BaccaratGame.cpp  Card.cpp  Deck.cpp  Display.cpp  Player.cpp  Scoreboard.cpp  Statistics.cpp  main.cpp
